// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSimple Snapshots Label 1`] = `
<div
  className="sc-AxirZ bXXfIz"
>
  <label
    className="sc-AxjAm hjwNwx"
  >
    Sivilstatus
  </label>
  <select
    className="sc-AxhCb kLGhTM"
  >
    <option
      value={1}
    >
      Gift 
    </option>
    <option
      value={2}
    >
      Samober
    </option>
    <option
      value={3}
    >
      Skilt
    </option>
    <option
      value={4}
    >
      Partnerskap
    </option>
    <option
      value={5}
    >
      Enke/Enkemann
    </option>
    <option
      value={6}
    >
      Separert
    </option>
  </select>
  <svg
    className="sc-AxiKw gYAEwv"
    height="7"
    viewBox="0 0 33 20"
    width="12"
  >
    <path
      d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
    />
  </svg>
</div>
`;

exports[`SelectSimple Snapshots No props 1`] = `
<div
  className="sc-AxirZ bXXfIz"
>
  <select
    className="sc-AxhCb kLGhTM"
  >
    <option
      value={1}
    >
      Gift 
    </option>
    <option
      value={2}
    >
      Samober
    </option>
    <option
      value={3}
    >
      Skilt
    </option>
    <option
      value={4}
    >
      Partnerskap
    </option>
    <option
      value={5}
    >
      Enke/Enkemann
    </option>
    <option
      value={6}
    >
      Separert
    </option>
  </select>
  <svg
    className="sc-AxiKw gYAEwv"
    height="7"
    viewBox="0 0 33 20"
    width="12"
  >
    <path
      d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
    />
  </svg>
</div>
`;

exports[`SelectSimple Snapshots Placeholder 1`] = `
<div
  className="sc-AxirZ bXXfIz"
>
  <label
    className="sc-AxjAm hjwNwx"
  >
    Sivilstatus
  </label>
  <select
    className="sc-AxhCb kLGhTM"
    placeholder="Velg..."
  >
    <option
      value={1}
    >
      Gift 
    </option>
    <option
      value={2}
    >
      Samober
    </option>
    <option
      value={3}
    >
      Skilt
    </option>
    <option
      value={4}
    >
      Partnerskap
    </option>
    <option
      value={5}
    >
      Enke/Enkemann
    </option>
    <option
      value={6}
    >
      Separert
    </option>
  </select>
  <svg
    className="sc-AxiKw gYAEwv"
    height="7"
    viewBox="0 0 33 20"
    width="12"
  >
    <path
      d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
    />
  </svg>
</div>
`;

exports[`SelectSimple Snapshots id 1`] = `
<div
  className="sc-AxirZ bXXfIz"
>
  <label
    className="sc-AxjAm hjwNwx"
    htmlFor="simpleSelect"
  >
    Sivilstatus
  </label>
  <select
    className="sc-AxhCb kLGhTM"
    id="simpleSelect"
    placeholder="Velg..."
  >
    <option
      value={1}
    >
      Gift 
    </option>
    <option
      value={2}
    >
      Samober
    </option>
    <option
      value={3}
    >
      Skilt
    </option>
    <option
      value={4}
    >
      Partnerskap
    </option>
    <option
      value={5}
    >
      Enke/Enkemann
    </option>
    <option
      value={6}
    >
      Separert
    </option>
  </select>
  <svg
    className="sc-AxiKw gYAEwv"
    height="7"
    viewBox="0 0 33 20"
    width="12"
  >
    <path
      d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
    />
  </svg>
</div>
`;

exports[`SelectSimple Snapshots no Children 1`] = `
<div
  className="sc-AxirZ bXXfIz"
>
  <label
    className="sc-AxjAm hjwNwx"
    htmlFor="simpleSelect"
  >
    Sivilstatus
  </label>
  <select
    className="sc-AxhCb kLGhTM"
    id="simpleSelect"
    placeholder="Velg..."
  />
  <svg
    className="sc-AxiKw gYAEwv"
    height="7"
    viewBox="0 0 33 20"
    width="12"
  >
    <path
      d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
    />
  </svg>
</div>
`;
